# carver-feeds-sdk

./: .bumpversion.cfg  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  SKILL.md  examples.md  pyproject.toml  reference.md  requirements.txt
.claude/.sessions/: .current-session  2025-11-18-1855-feat-feed-new-field.md  2026-01-12-1224-feat-s3-endpoints.md  2026-01-13-1207-feat-new-get-endpoint.md  2026-01-15-0848-docs-s3-access-updates.md  2026-01-19-1011-docs-annotations-update.md  2026-03-17-1501-topics-api-changes.md  2026-04-12-2215-feat-statutes-apis.md
.claude/agents/: python-code-reviewer.md  python-expert.md
.claude/skills/carver-api-skill/: README.md
docs/: CNAME  LESSONS.md  README.md  _config.yml  api-reference.md  examples.md  how-to-write-claude-skills.md  index.md  technical-details.md
docs/s3-content/: ARCHITECTURE_DIAGRAM.md  IMPLEMENTATION_PLAN.md  QUICK_REFERENCE.md
docs/sdk/: index.md
examples/: README.md  advanced_queries.py  annotations.py  basic_usage.py  statutes.py  user_subscriptions.py
scripts/: __init__.py  carver_api.py  data_manager.py  query_engine.py  utils.py
skill/: SKILL.md
skill/scripts/: carver_api.py  data_manager.py
src/carver_feeds/: __init__.py  __version__.py  carver_api.py  data_manager.py  query_engine.py
tests/: conftest.py  test_carver_api.py  test_data_manager.py  test_query_engine.py  test_s3_client.py
